--- a/nestjs/Dockerfile
+++ b/nestjs/Dockerfile
@@ -8,10 +8,12 @@ ENV TZ utc
 
 WORKDIR /app
 
+COPY nestjs/package.json /app/nestjs/
 COPY package.json /app
 COPY package-lock.json /app
+
 RUN npm install --production --no-optional
 
-COPY dist /app/dist
+COPY nestjs/dist /app/nestjs/dist
 
-CMD [ "node", "dist/nestjs/src/main" ]
+CMD [ "node", "/app/nestjs/dist/nestjs/src/main" ]
