--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -72,11 +72,11 @@
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.3.9",
     "@openapitools/openapi-generator-cli": "2.6.0",
-    "@total-typescript/ts-reset": "^0.4.2",
+    "@total-typescript/ts-reset": "0.4.2",
     "@types/cache-manager": "4.0.2",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.17",
-    "@types/jest": "29.4.0",
+    "@types/jest": "29.5.3",
     "@types/json2csv": "5.0.3",
     "@types/jsonwebtoken": "9.0.1",
     "@types/lodash": "4.14.191",
@@ -90,12 +90,12 @@
     "eslint": "8.35.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
-    "jest": "^29.4.3",
+    "jest": "^29.6.1",
     "jest-junit": "15.0.0",
     "pino-pretty": "9.4.0",
     "prettier": "2.8.8",
     "supertest": "6.3.3",
-    "ts-jest": "29.0.5",
+    "ts-jest": "29.1.1",
     "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0",
