--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -53,7 +53,7 @@
     "lodash": "4.17.21",
     "nanoid": "3.3.4",
     "nestjs-pino": "3.1.2",
-    "openai": "^3.3.0",
+    "openai": "3.3.0",
     "passport": "0.6.0",
     "passport-custom": "1.1.1",
     "passport-github2": "0.1.12",
