--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -40,10 +40,11 @@
     "axios": "1.3.4",
     "cache-manager": "4.1.0",
     "class-transformer": "0.5.1",
-    "class-validator": "0.14.0",
+    "class-validator": "0.13.2",
     "cookie-parser": "1.4.6",
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
+    "eta": "^3.0.1",
     "express": "4.18.2",
     "handlebars": "4.7.7",
     "ical-generator": "3.6.1",
@@ -52,6 +53,7 @@
     "lodash": "4.17.21",
     "nanoid": "3.3.4",
     "nestjs-pino": "3.1.2",
+    "openai": "3.3.0",
     "passport": "0.6.0",
     "passport-custom": "1.1.1",
     "passport-github2": "0.1.12",
@@ -70,10 +72,11 @@
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.3.9",
     "@openapitools/openapi-generator-cli": "2.6.0",
+    "@total-typescript/ts-reset": "0.4.2",
     "@types/cache-manager": "4.0.2",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.17",
-    "@types/jest": "29.4.0",
+    "@types/jest": "29.5.3",
     "@types/json2csv": "5.0.3",
     "@types/jsonwebtoken": "9.0.1",
     "@types/lodash": "4.14.191",
@@ -87,12 +90,12 @@
     "eslint": "8.35.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
-    "jest": "^29.4.3",
+    "jest": "^29.6.1",
     "jest-junit": "15.0.0",
     "pino-pretty": "9.4.0",
     "prettier": "2.8.8",
     "supertest": "6.3.3",
-    "ts-jest": "29.0.5",
+    "ts-jest": "29.1.1",
     "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0",
