--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   "devDependencies": {
     "concurrently": "7.6.0",
     "prettier": "2.8.8",
-    "turbo": "^1.10.2"
+    "turbo": "1.10.12"
   }
 }
