--- a/turbo.json
+++ b/turbo.json
@@ -45,7 +45,8 @@
         "RSSHCOOL_PG_HOST",
         "RSSHCOOL_PG_PASSWORD",
         "RSSHCOOL_PG_USERNAME",
-        "RSSHCOOL_UI_GCP_MAPS_API_KEY"
+        "RSSHCOOL_UI_GCP_MAPS_API_KEY",
+        "RSSHCOOL_OPENAI_API_KEY"
       ]
     },
     "lint": {},
