--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -89,7 +89,7 @@
     "@typescript-eslint/parser": "5.59.7",
     "eslint": "8.35.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-config-turbo": "^1.9.9",
+    "eslint-config-turbo": "1.9.9",
     "eslint-plugin-prettier": "4.2.1",
     "jest": "^29.6.1",
     "jest-junit": "15.0.0",
