--- a/server/package.json
+++ b/server/package.json
@@ -68,7 +68,7 @@
     "@typescript-eslint/parser": "5.33.1",
     "cross-env": "7.0.3",
     "eslint": "8.22.0",
-    "eslint-config-turbo": "^1.9.9",
+    "eslint-config-turbo": "1.9.9",
     "jest": "28.1.3",
     "jest-junit": "13.0.0",
     "pino-pretty": "7.5.1",
