feat: open api key in env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,7 @@ services:
       RSSHCOOL_AWS_REST_API_KEY: ${RSSHCOOL_AWS_REST_API_KEY}
       RSSHCOOL_USERS_CLOUD_USERNAME: ${RSSHCOOL_USERS_CLOUD_USERNAME}
       RSSHCOOL_USERS_CLOUD_PASSWORD: ${RSSHCOOL_USERS_CLOUD_PASSWORD}
+      RSSHCOOL_OPENAI_API_KEY: ${RSSHCOOL_OPENAI_API_KEY}
     restart: on-failure
     networks:
       - shared-network
