--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
     "dotenv": "16.0.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.4.3",
+    "eslint-config-turbo": "1.9.9",
     "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-jest-dom": "4.0.3",
     "eslint-plugin-testing-library": "5.11.0",
@@ -71,7 +72,7 @@
     "jest-junit": "16.0.0",
     "jest-mock-axios": "4.7.2",
     "mq-polyfill": "1.1.8",
-    "typescript": "4.9.5"
+    "typescript": "5.1.6"
   },
   "nextBundleAnalysis": {
     "budget": 512000,
