--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -44,7 +44,7 @@
     "cookie-parser": "1.4.6",
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
-    "eta": "^3.0.1",
+    "eta": "^3.1.0",
     "express": "4.18.2",
     "handlebars": "4.7.7",
     "ical-generator": "3.6.1",
@@ -89,6 +89,7 @@
     "@typescript-eslint/parser": "5.59.7",
     "eslint": "8.35.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-config-turbo": "1.9.9",
     "eslint-plugin-prettier": "4.2.1",
     "jest": "^29.6.1",
     "jest-junit": "15.0.0",
@@ -99,7 +100,7 @@
     "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0",
-    "typescript": "4.9.5"
+    "typescript": "5.1.6"
   },
   "jest": {
     "moduleFileExtensions": [
