--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -52,10 +52,12 @@ jobs:
 
       - name: Add lockfile and package.json's and source of isolated subworkspace
         run: |
-          cp -r out/json/ app
-          cp -r out/package-lock.json app
-          cp -r out/full/ app
-          cp -r common app/common
+          mkdir -p ./app
+          cp -r out/json/ ./app
+          cp -r out/package-lock.json ./app
+          cp -r out/full/ ./app
+          cp -r common ./app/common
+          cd ./app && ls -la
 
       - name: Install dependencies
         run: npm ci
