--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -54,10 +54,9 @@ jobs:
         run: |
           mkdir -p app
           cp -r out/json/. app
-          cp -r out/package-lock.json app
           cp -r out/full/. app
+          cp -r out/package-lock.json app
           cp -r common app/common
-          cd app && ls -la
 
       - name: Install dependencies
         run: npm ci
@@ -130,9 +129,10 @@ jobs:
 
       - name: Add lockfile and package.json's and source of isolated subworkspace
         run: |
-          cp -r out/json/ app
+          mkdir -p app
+          cp -r out/json/. app
+          cp -r out/full/. app
           cp -r out/package-lock.json app
-          cp -r out/full/ app
           cp -r common app/common
 
       - name: Install dependencies
@@ -192,9 +192,10 @@ jobs:
 
       - name: Add lockfile and package.json's and source of isolated subworkspace
         run: |
-          cp -r out/json/ app
+          mkdir -p app
+          cp -r out/json/. app
+          cp -r out/full/. app
           cp -r out/package-lock.json app
-          cp -r out/full/ app
           cp -r common app/common
 
       - name: Install dependencies
