fix: update renovate

--- a/renovate.json
+++ b/renovate.json
@@ -20,6 +20,10 @@
     {
       "matchPackagePatterns": ["actions/"],
       "groupName": "actions"
+    },
+    {
+      "matchPackagePatterns": ["^eslint"],
+      "groupName": "eslint"
     }
   ]
 }
