--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -40,16 +40,16 @@
     "axios": "1.3.4",
     "cache-manager": "4.1.0",
     "class-transformer": "0.5.1",
-    "class-validator": "0.13.2",
+    "class-validator": "0.14.0",
     "cookie-parser": "1.4.6",
-    "dayjs": "1.11.7",
+    "dayjs": "1.11.9",
     "dotenv": "16.0.3",
     "eta": "^3.1.0",
     "express": "4.18.2",
     "handlebars": "4.7.7",
     "ical-generator": "3.6.1",
     "json2csv": "5.0.3",
-    "jsonwebtoken": "9.0.0",
+    "jsonwebtoken": "9.0.1",
     "lodash": "4.17.21",
     "nanoid": "3.3.4",
     "nestjs-pino": "3.1.2",
@@ -63,7 +63,7 @@
     "pino-http": "8.3.3",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "7.8.0",
+    "rxjs": "7.8.1",
     "swagger-ui-express": "4.6.1",
     "typeorm": "0.3.14"
   },
@@ -78,26 +78,25 @@
     "@types/express": "4.17.17",
     "@types/jest": "29.5.3",
     "@types/json2csv": "5.0.3",
-    "@types/jsonwebtoken": "9.0.1",
-    "@types/lodash": "4.14.191",
-    "@types/node": "16.11.52",
+    "@types/jsonwebtoken": "9.0.2",
+    "@types/lodash": "4.14.197",
+    "@types/node": "18.17.5",
     "@types/passport-github2": "1.2.5",
     "@types/passport-http": "0.3.9",
-    "@types/passport-jwt": "3.0.8",
+    "@types/passport-jwt": "3.0.9",
     "@types/supertest": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "5.59.7",
-    "@typescript-eslint/parser": "5.59.7",
-    "eslint": "8.35.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-config-turbo": "1.9.9",
-    "eslint-plugin-prettier": "4.2.1",
-    "jest": "^29.6.1",
-    "jest-junit": "15.0.0",
+    "@typescript-eslint/eslint-plugin": "6.4.0",
+    "@typescript-eslint/parser": "6.4.0",
+    "eslint": "8.47.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-config-turbo": "1.10.12",
+    "eslint-plugin-prettier": "5.0.0",
+    "jest": "29.6.2",
+    "jest-junit": "16.0.0",
     "pino-pretty": "9.4.0",
-    "prettier": "2.8.8",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
-    "ts-loader": "9.4.2",
+    "ts-loader": "9.4.4",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0",
     "typescript": "5.1.6"
