--- a/client/package.json
+++ b/client/package.json
@@ -72,6 +72,7 @@
     "jest-junit": "16.0.0",
     "jest-mock-axios": "4.7.2",
     "mq-polyfill": "1.1.8",
+    "nextjs-bundle-analysis": "0.4.0",
     "typescript": "5.1.6"
   },
   "nextBundleAnalysis": {
