--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,37 +16,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
 
       - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Restore npm cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-npm
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-
-            ${{ runner.os }}-
-
-      - name: Restore node_modules cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node_modules
-        with:
-          path: |
-            node_modules
-            client/node_modules
-            server/node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
+        uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install
+        uses: bahmutov/npm-install@v1
 
       - name: Format & Lint (npm run lint && npm run ci:format)
         run: |
@@ -60,40 +38,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
 
       - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Restore npm cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-npm
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-
-            ${{ runner.os }}-
-
-      - name: Restore node_modules cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node_modules
-        with:
-          path: |
-            node_modules
-            client/node_modules
-            server/node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-
-            ${{ runner.os }}-
+        uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install
+        uses: bahmutov/npm-install@v1
 
       - name: Test (client)
         run: npm run test:ci
@@ -110,21 +63,21 @@ jobs:
         working-directory: nestjs
 
       - name: Upload test report (client)
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         if: success() || failure()
         with:
           name: test-report-client
           path: reports/jest-junit-client.xml
 
       - name: Upload test report (server)
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         if: success() || failure()
         with:
           name: test-report-server
           path: reports/jest-junit-server.xml
 
       - name: Upload test report (nestjs)
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         if: success() || failure()
         with:
           name: test-report-nestjs
@@ -135,39 +88,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
 
       - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Restore npm cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-npm
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-
-
-      - name: Restore node_modules cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node_modules
-        with:
-          path: |
-            node_modules
-            client/node_modules
-            server/node_modules
-            nestjs/node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-
+        uses: actions/checkout@v3
 
       - name: Restore next cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         env:
           cache-name: cache-next
         with:
@@ -178,7 +107,7 @@ jobs:
             ${{ runner.os }}-${{ env.cache-name }}-${{ github.ref_name }}
 
       - name: Restore Docker layers
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy') }}
         with:
           path: /tmp/.buildx-cache
@@ -201,7 +130,7 @@ jobs:
           password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Install dependencies
-        run: npm install
+        uses: bahmutov/npm-install@v1
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 'true'
 
@@ -312,15 +241,15 @@ jobs:
     if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy') }}
     steps:
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
 
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Restore npm cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         env:
           cache-name: cache-npm
         with:
@@ -363,15 +292,15 @@ jobs:
     if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy') }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
 
       - name: Restore npm cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         env:
           cache-name: cache-npm
         with:
@@ -382,7 +311,7 @@ jobs:
             ${{ runner.os }}-
 
       - name: Restore browsers cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: '~/.cache/ms-playwright/'
           key: ${{ runner.os }}-browsers
@@ -403,7 +332,7 @@ jobs:
         run: npx playwright test
 
       - name: Save Report
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         if: always()
         with:
           name: playwright-report
