fix: error and types

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,7 @@ services:
       RSSHCOOL_USERS_CLOUD_USERNAME: ${RSSHCOOL_USERS_CLOUD_USERNAME}
       RSSHCOOL_USERS_CLOUD_PASSWORD: ${RSSHCOOL_USERS_CLOUD_PASSWORD}
       RSSHCOOL_OPENAI_API_KEY: ${RSSHCOOL_OPENAI_API_KEY}
+      SENTRY_DSN: ${SENTRY_DSN}
     restart: on-failure
     networks:
       - shared-network
