--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -75,7 +75,7 @@
     "@nestjs/schematics": "10.0.2",
     "@nestjs/testing": "10.1.3",
     "@openapitools/openapi-generator-cli": "2.7.0",
-    "@total-typescript/ts-reset": "0.4.2",
+    "@sentry/node": "7.68.0",
     "@types/cache-manager": "4.0.2",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.17",
