--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -25,21 +25,21 @@
   },
   "dependencies": {
     "@apalchys/pino-cloudwatch": "0.8.6",
-    "@aws-sdk/client-s3": "3.391.0",
+    "@aws-sdk/client-s3": "3.409.0",
     "@nestjs/axios": "3.0.0",
     "@nestjs/cache-manager": "2.1.0",
-    "@nestjs/common": "10.1.3",
-    "@nestjs/config": "3.0.0",
-    "@nestjs/core": "10.1.3",
+    "@nestjs/common": "10.2.4",
+    "@nestjs/config": "3.0.1",
+    "@nestjs/core": "10.2.4",
     "@nestjs/mapped-types": "2.0.2",
-    "@nestjs/passport": "10.0.0",
-    "@nestjs/platform-express": "10.1.3",
-    "@nestjs/schedule": "3.0.2",
-    "@nestjs/swagger": "7.1.8",
+    "@nestjs/passport": "10.0.1",
+    "@nestjs/platform-express": "10.2.4",
+    "@nestjs/schedule": "3.0.3",
+    "@nestjs/swagger": "7.1.10",
     "@nestjs/typeorm": "10.0.0",
     "@sentry/node": "7.68.0",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.77",
+    "@swc/cli": "0.1.62",
+    "@swc/core": "1.3.83",
     "@vendia/serverless-express": "4.10.4",
     "axios": "1.5.0",
     "cache-manager": "5.2.3",
@@ -50,9 +50,9 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "handlebars": "4.7.8",
-    "ical-generator": "5.0.0",
+    "ical-generator": "5.0.1",
     "json2csv": "5.0.3",
-    "jsonwebtoken": "9.0.1",
+    "jsonwebtoken": "9.0.2",
     "lodash": "4.17.21",
     "nanoid": "3.3.6",
     "nestjs-pino": "3.3.0",
@@ -63,7 +63,7 @@
     "passport-http": "0.3.0",
     "passport-jwt": "4.0.1",
     "pg": "8.11.3",
-    "pino-http": "8.4.0",
+    "pino-http": "8.5.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.1",
     "rxjs": "7.8.1",
@@ -71,25 +71,25 @@
     "typeorm": "0.3.17"
   },
   "devDependencies": {
-    "@nestjs/cli": "10.1.12",
+    "@nestjs/cli": "10.1.17",
     "@nestjs/schematics": "10.0.2",
-    "@nestjs/testing": "10.1.3",
+    "@nestjs/testing": "10.2.4",
     "@openapitools/openapi-generator-cli": "2.7.0",
-    "@types/cache-manager": "4.0.2",
-    "@types/cookie-parser": "1.4.3",
+    "@types/cache-manager": "4.0.3",
+    "@types/cookie-parser": "1.4.4",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.4",
     "@types/json2csv": "5.0.3",
     "@types/jsonwebtoken": "9.0.2",
-    "@types/lodash": "4.14.197",
-    "@types/node": "20.5.0",
+    "@types/lodash": "4.14.198",
+    "@types/node": "18.17.15",
     "@types/passport-github2": "1.2.5",
     "@types/passport-http": "0.3.9",
     "@types/passport-jwt": "3.0.9",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "6.6.0",
     "@typescript-eslint/parser": "6.6.0",
-    "eslint": "8.48.0",
+    "eslint": "8.49.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-config-turbo": "1.10.13",
     "eslint-plugin-prettier": "5.0.0",
@@ -101,7 +101,7 @@
     "ts-loader": "9.4.4",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   },
   "jest": {
     "moduleFileExtensions": [
