--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "8.0.7",
     "react-masonry-css": "1.0.16",
+    "react-quill": "2.0.0",
     "react-use": "17.4.0",
     "remark-gfm": "3.0.1",
     "serverless-http": "3.2.0",
