fix: clean up env variables

--- a/turbo.json
+++ b/turbo.json
@@ -14,7 +14,6 @@
         "NODE_TLS_REJECT_UNAUTHORIZED",
         "RS_ENV",
         "RSSCHOOL_ADMIN_TEAMS",
-        "RSSCHOOL_ADMIN_TEAMS",
         "RSSHCOOL_API_ADMIN_PASSWORD",
         "RSSHCOOL_API_ADMIN_USERNAME",
         "RSSHCOOL_API_AUTH_CALLBACK",
@@ -30,8 +29,6 @@
         "RSSHCOOL_API_GITHUB_APP_INSTALL_ID",
         "RSSHCOOL_API_GITHUB_HOOKS_SECRET",
         "RSSHCOOL_API_GITHUB_PRIVATE_KEY",
-        "RSSHCOOL_API_HIRERS",
-        "RSSHCOOL_API_HIRERS",
         "RSSHCOOL_API_SESSION_KEY",
         "RSSHCOOL_API_USERS_CLOUD_PASSWORD",
         "RSSHCOOL_API_USERS_CLOUD_USERNAME",
@@ -41,12 +38,14 @@
         "RSSHCOOL_AWS_REST_API_URL",
         "RSSHCOOL_AWS_SECRET_ACCESS_KEY",
         "RSSHCOOL_HOST",
+        "RSSHCOOL_OPENAI_API_KEY",
         "RSSHCOOL_PG_DATABASE",
         "RSSHCOOL_PG_HOST",
         "RSSHCOOL_PG_PASSWORD",
         "RSSHCOOL_PG_USERNAME",
         "RSSHCOOL_UI_GCP_MAPS_API_KEY",
-        "RSSHCOOL_OPENAI_API_KEY",
+        "RSSHCOOL_USERS_ADMINS",
+        "RSSHCOOL_USERS_HIRERS",
         "SENTRY_DSN"
       ]
     },
