--- a/client/package.json
+++ b/client/package.json
@@ -24,52 +24,52 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
-    "@ant-design/compatible": "5.1.2",
-    "@ant-design/cssinjs": "^1.20.0",
+    "@ant-design/compatible": "5.1.3",
+    "@ant-design/cssinjs": "1.21.1",
     "@ant-design/plots": "1.2.5",
-    "@sentry/nextjs": "7.81.0",
-    "antd": "5.11.2",
-    "axios": "1.6.2",
+    "@sentry/nextjs": "8.30.0",
+    "antd": "5.20.6",
+    "axios": "1.7.7",
     "cookie": "0.6.0",
     "csvtojson": "2.0.10",
-    "dayjs": "1.11.10",
+    "dayjs": "1.11.13",
     "lodash": "4.17.21",
-    "next": "13.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-markdown": "8.0.7",
+    "next": "14.2.11",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-markdown": "9.0.1",
     "react-masonry-css": "1.0.16",
     "react-quill": "2.0.0",
-    "react-use": "17.4.0",
-    "remark-gfm": "3.0.1",
+    "react-use": "17.5.1",
+    "remark-gfm": "4.0.0",
     "serverless-http": "3.2.0",
-    "styled-jsx": "5.1.2",
+    "styled-jsx": "5.1.6",
     "use-places-autocomplete": "4.0.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "13.4.3",
-    "@playwright/test": "1.37.1",
-    "@testing-library/jest-dom": "6.1.4",
-    "@testing-library/react": "14.1.2",
-    "@testing-library/user-event": "14.5.1",
-    "@types/aws-lambda": "8.10.126",
-    "@types/cookie": "0.5.4",
-    "@types/lodash": "4.14.201",
-    "@types/node": "20.9.2",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
-    "dotenv": "16.3.1",
-    "eslint-config-next": "14.0.3",
-    "eslint-config-turbo": "1.10.16",
-    "eslint-plugin-jest": "27.6.0",
-    "eslint-plugin-jest-dom": "5.1.0",
-    "eslint-plugin-testing-library": "6.1.2",
+    "@next/bundle-analyzer": "14.2.11",
+    "@playwright/test": "1.47.1",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
+    "@types/aws-lambda": "8.10.145",
+    "@types/cookie": "0.6.0",
+    "@types/lodash": "4.17.7",
+    "@types/node": "20.16.5",
+    "@types/react": "18.3.5",
+    "@types/react-dom": "18.3.0",
+    "dotenv": "16.4.5",
+    "eslint-config-next": "14.2.11",
+    "eslint-config-turbo": "2.1.2",
+    "eslint-plugin-jest": "28.8.3",
+    "eslint-plugin-jest-dom": "5.4.0",
+    "eslint-plugin-testing-library": "6.3.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-junit": "16.0.0",
     "jest-mock-axios": "4.7.3",
     "mq-polyfill": "1.1.8",
-    "nextjs-bundle-analysis": "0.4.0",
-    "typescript": "5.3.2"
+    "nextjs-bundle-analysis": "0.5.0",
+    "typescript": "5.6.2"
   },
   "nextBundleAnalysis": {
     "budget": 512000,
