--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -25,77 +25,76 @@
   },
   "dependencies": {
     "@apalchys/pino-cloudwatch": "0.9.0",
-    "@aws-sdk/client-s3": "3.454.0",
-    "@nestjs/axios": "3.0.1",
-    "@nestjs/cache-manager": "2.1.1",
-    "@nestjs/common": "10.2.10",
-    "@nestjs/config": "3.1.1",
-    "@nestjs/core": "10.2.10",
-    "@nestjs/mapped-types": "2.0.4",
-    "@nestjs/passport": "10.0.2",
-    "@nestjs/platform-express": "10.2.10",
-    "@nestjs/schedule": "4.0.0",
-    "@nestjs/swagger": "7.1.16",
-    "@nestjs/typeorm": "10.0.1",
-    "@sentry/node": "7.81.0",
-    "@swc/cli": "^0.1.63",
-    "@swc/core": "^1.3.96",
-    "@vendia/serverless-express": "4.10.4",
-    "axios": "1.6.2",
-    "cache-manager": "5.3.1",
+    "@aws-sdk/client-s3": "3.651.1",
+    "@nestjs/axios": "3.0.3",
+    "@nestjs/cache-manager": "2.2.2",
+    "@nestjs/common": "10.4.1",
+    "@nestjs/config": "3.2.3",
+    "@nestjs/core": "10.4.1",
+    "@nestjs/mapped-types": "2.0.5",
+    "@nestjs/passport": "10.0.3",
+    "@nestjs/platform-express": "10.4.1",
+    "@nestjs/schedule": "4.1.0",
+    "@nestjs/swagger": "7.4.0",
+    "@nestjs/typeorm": "10.0.2",
+    "@sentry/node": "8.30.0",
+    "@swc/cli": "0.4.0",
+    "@swc/core": "1.7.26",
+    "@vendia/serverless-express": "4.12.6",
+    "axios": "1.7.7",
+    "cache-manager": "5.7.6",
     "class-transformer": "0.5.1",
-    "class-validator": "0.14.0",
+    "class-validator": "0.14.1",
     "cookie-parser": "1.4.6",
-    "dayjs": "1.11.10",
-    "dotenv": "16.3.1",
-    "express": "4.18.2",
+    "dayjs": "1.11.13",
+    "dotenv": "16.4.5",
+    "express": "4.21.0",
     "handlebars": "4.7.8",
-    "ical-generator": "5.0.0",
-    "json2csv": "5.0.3",
+    "ical-generator": "8.0.0",
+    "json2csv": "5.0.7",
     "jsonwebtoken": "9.0.2",
     "lodash": "4.17.21",
     "nanoid": "3.3.6",
     "nestjs-pino": "3.5.0",
-    "openai": "4.19.0",
+    "openai": "4.61.0",
     "passport": "0.6.0",
     "passport-custom": "1.1.1",
     "passport-github2": "0.1.12",
     "passport-http": "0.3.0",
     "passport-jwt": "4.0.1",
-    "pg": "8.11.3",
+    "pg": "8.12.0",
     "pino-http": "8.5.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.5",
     "rxjs": "7.8.1",
-    "swagger-ui-express": "5.0.0",
-    "typeorm": "0.3.17"
+    "swagger-ui-express": "5.0.1",
+    "typeorm": "0.3.20"
   },
   "devDependencies": {
-    "@nestjs/cli": "10.2.1",
-    "@nestjs/schematics": "10.0.3",
-    "@nestjs/testing": "10.2.10",
-    "@openapitools/openapi-generator-cli": "2.7.0",
-    "@types/cache-manager": "4.0.5",
-    "@types/cookie-parser": "1.4.6",
+    "@nestjs/cli": "10.4.5",
+    "@nestjs/schematics": "10.1.4",
+    "@nestjs/testing": "10.4.1",
+    "@openapitools/openapi-generator-cli": "2.13.5",
+    "@types/cache-manager": "4.0.6",
+    "@types/cookie-parser": "1.4.7",
     "@types/express": "4.17.21",
-    "@types/jest": "29.5.8",
-    "@types/json2csv": "5.0.6",
-    "@types/jsonwebtoken": "9.0.5",
-    "@types/lodash": "4.14.201",
-    "@types/node": "20.9.2",
+    "@types/json2csv": "5.0.7",
+    "@types/jsonwebtoken": "9.0.6",
+    "@types/lodash": "4.17.7",
+    "@types/node": "20.16.5",
     "@types/passport-github2": "1.2.9",
     "@types/passport-http": "0.3.11",
     "@types/passport-jwt": "3.0.13",
-    "@types/supertest": "2.0.16",
+    "@types/supertest": "6.0.2",
     "eslint-config-prettier": "9.0.0",
     "eslint-config-turbo": "1.10.16",
     "eslint-plugin-prettier": "5.0.1",
     "jest-junit": "16.0.0",
     "pino-pretty": "10.2.3",
     "supertest": "6.3.3",
-    "ts-jest": "29.1.1",
+    "ts-jest": "29.2.5",
     "ts-loader": "9.5.1",
-    "ts-node": "10.9.1",
+    "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
     "typescript": "5.3.2"
   },
