fix: migration to turbo

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,7 +44,7 @@ jobs:
             ${{ runner.os }}-${{ env.cache-name }}-
 
       - name: Install turbo
-        run: npm install turbo@1 --global
+        run: npm install turbo@2 --global
 
       - name: Generate a isolated subworkspace for Client
         run: turbo prune --scope=client --docker
@@ -72,6 +72,7 @@ jobs:
           RSSHCOOL_UI_GCP_MAPS_API_KEY: ${{ secrets.RSSHCOOL_UI_GCP_MAPS_API_KEY }}
           CDN_HOST: 'https://cdn.rs.school'
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          DO_NOT_TRACK: 1
         working-directory: ./app
         run: npm run build
 
@@ -146,6 +147,7 @@ jobs:
       - name: Build (npm run build)
         env:
           NODE_ENV: production
+          DO_NOT_TRACK: 1
         run: npm run build
         working-directory: ./app
 
@@ -208,6 +210,7 @@ jobs:
       - name: Build (npm run build)
         env:
           NODE_ENV: production
+          DO_NOT_TRACK: 1
         run: npx turbo run build --filter=nestjs
         working-directory: ./app
 
