--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,8 +7,8 @@ ENV NODE_PORT 8080
 
 WORKDIR /app
 
-COPY client/next.config.js /app/client/next.config.js
-COPY client/next.config.prod.js /app/client/next.config.prod.js
+COPY client/next.config.mjs /app/client/next.config.mjs
+COPY client/next.config.prod.mjs /app/client/next.config.prod.mjs
 COPY client/package.json /app/client/package.json
 COPY client/public /app/client/public
 
