--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,11 +43,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
 
-      - name: Install turbo
-        run: npm install turbo@2 --global
-
       - name: Generate a isolated subworkspace for Client
-        run: turbo prune --scope=client --docker
+        run: npx turbo prune --scope=client --docker
 
       - name: Add lockfile and package.json's and source of isolated subworkspace
         run: |
@@ -122,11 +119,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
 
-      - name: Install turbo
-        run: npm install turbo@1 --global
-
       - name: Generate a isolated subworkspace for Client
-        run: turbo prune --scope=server --docker
+        run: npx turbo prune --scope=server --docker
 
       - name: Add lockfile and package.json's and source of isolated subworkspace
         run: |
@@ -186,11 +180,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
 
-      - name: Install turbo
-        run: npm install turbo@1 --global
-
       - name: Generate a isolated subworkspace for Client
-        run: turbo prune --scope=server --scope=nestjs --docker
+        run: npx turbo prune --scope=server --scope=nestjs --docker
 
       - name: Add lockfile and package.json's and source of isolated subworkspace
         run: |
