--- a/setup/cdk/package.json
+++ b/setup/cdk/package.json
@@ -1,9 +1,10 @@
 {
+  "type": "module",
   "name": "cdk",
   "dependencies": {
     "aws-cdk": "2.177.0",
     "aws-cdk-lib": "2.177.0",
     "constructs": "^10",
-    "ts-node": "^10.9.1"
+    "tsx": "^4.19.2"
   }
 }
