fix: optimize Nginx configuration for buffer sizes and gzip settings

--- a/setup/nginx/nginx.conf
+++ b/setup/nginx/nginx.conf
@@ -40,6 +40,12 @@ http {
   access_log off;
   open_file_cache max=100;
   client_max_body_size 50m;
+
+  large_client_header_buffers 8 32k;
+  proxy_buffer_size       16k;
+  proxy_buffers           4 32k;
+  proxy_busy_buffers_size 32k;
+
   proxy_read_timeout 120s;
   proxy_send_timeout 120s;
 
@@ -69,10 +75,10 @@ http {
     etag off;
     expires $expires;
 
-    gzip  on;
+    gzip on;
     gzip_comp_level 5;
     gzip_min_length 1100;
-    gzip_buffers    16 32k;
+    gzip_buffers 16 32k;
     gzip_proxied any;
     gzip_types
       text/css
@@ -88,9 +94,8 @@ http {
       font/opentype
       application/vnd.ms-fontobject
       image/svg+xml;
-
     gzip_static on;
-    gzip_vary   on;
+    gzip_vary on;
 
     add_header X-Request-Time $request_time;
 
@@ -127,10 +132,10 @@ http {
     etag off;
     expires $expires;
 
-    gzip  on;
+    gzip on;
     gzip_comp_level 5;
     gzip_min_length 1100;
-    gzip_buffers    16 32k;
+    gzip_buffers 16 32k;
     gzip_proxied any;
     gzip_types
       text/css
@@ -146,9 +151,8 @@ http {
       font/opentype
       application/vnd.ms-fontobject
       image/svg+xml;
-
     gzip_static on;
-    gzip_vary   on;
+    gzip_vary on;
 
     add_header X-Request-Time $request_time;
 
