chore: run renovate once a month

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -1,7 +1,8 @@
 name: Renovate
 on:
   schedule:
-    - cron: '0 */8 * * *'
+    # once a month
+    - cron: '0 0 1 * *'
   workflow_dispatch:
 jobs:
   renovate:
