--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-jest": "28.11.0",
     "jest": "29.7.0",
     "prettier": "3.5.1",
+    "ts-node": "10.9.2",
     "turbo": "2.4.2",
     "typescript": "5.7.3",
     "typescript-eslint": "8.24.0"
