--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -28,30 +28,31 @@
     "@apalchys/pino-cloudwatch": "0.9.0",
     "@aws-sdk/client-s3": "3.749.0",
     "@nestjs/axios": "4.0.0",
-    "@nestjs/cache-manager": "3.0.0",
-    "@nestjs/common": "11.0.9",
+    "@nestjs/cache-manager": "2.3.0",
+    "@nestjs/common": "10.4.15",
     "@nestjs/config": "4.0.0",
-    "@nestjs/core": "11.0.9",
+    "@nestjs/core": "10.4.15",
+    "@nestjs/event-emitter": "3.0.1",
     "@nestjs/mapped-types": "2.1.0",
     "@nestjs/passport": "11.0.5",
-    "@nestjs/platform-express": "11.0.9",
+    "@nestjs/platform-express": "10.4.15",
     "@nestjs/schedule": "5.0.1",
-    "@nestjs/swagger": "11.0.3",
+    "@nestjs/swagger": "8.1.1",
     "@nestjs/typeorm": "11.0.0",
-    "@sentry/node": "8.47.0",
-    "@vendia/serverless-express": "4.10.4",
-    "cache-manager": "6.4.0",
+    "@sentry/node": "8.55.0",
+    "@vendia/serverless-express": "4.12.6",
+    "cache-manager": "5.7.6",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "cookie-parser": "1.4.7",
-    "express": "5.0.1",
+    "express": "4.21.2",
     "handlebars": "4.7.8",
-    "ical-generator": "5.0.0",
+    "ical-generator": "5.0.1",
     "json2csv": "5.0.7",
     "jsonwebtoken": "9.0.2",
     "nanoid": "3.3.8",
     "nestjs-pino": "4.3.0",
-    "openai": "4.19.0",
+    "openai": "4.85.1",
     "passport": "0.6.0",
     "passport-custom": "1.1.1",
     "passport-github2": "0.1.12",
@@ -59,16 +60,16 @@
     "passport-jwt": "4.0.1",
     "pg": "8.11.3",
     "pino-http": "8.5.1",
-    "reflect-metadata": "0.1.13",
-    "rimraf": "5.0.5",
+    "reflect-metadata": "0.2.2",
+    "rimraf": "6.0.1",
     "rxjs": "7.8.1",
     "swagger-ui-express": "5.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "11.0.2",
-    "@nestjs/schematics": "11.0.0",
-    "@nestjs/testing": "11.0.9",
-    "@openapitools/openapi-generator-cli": "2.16.3",
+    "@nestjs/cli": "^10",
+    "@nestjs/schematics": "^10",
+    "@nestjs/testing": "^10",
+    "@openapitools/openapi-generator-cli": "2.20.0",
     "@types/cookie-parser": "1.4.6",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.8",
